# aiohub-paddle-ocr

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  MODEL_THIRD_PARTY_NOTICES.md  PaddleOcr.vue  README.md  build.js  download-ort-gpu.js  download-ort.js  download-v6-models.js  manifest.json  package.json  tsconfig.json  vite.config.js
.github/workflows/: release.yml  test-build.yml
components/: ControlPanel.vue  ImportModelDialog.vue  PreviewPanel.vue  ResultPanel.vue  types.ts
composables/: useModelRegistry.ts  useOcrEngine.ts  useOcrImage.ts
docs/Plan/: ppocrv6-official-migration.md  ui-reconstruction-and-model-import.md
models/: registry.json
models/ppocr-v5-mobile/: README.md
models/ppocr-v6-small-onnx/: README.md
src/: errors.rs  main.rs  model_registry.rs  native_stdout.rs  protocol.rs  recognition.rs
src/backends/: mnn.rs  mod.rs  onnx.rs
src/backends/onnx/: config.rs  runtime.rs  smoke.rs
utils/: ocr-helpers.ts
