[package]
name = "aiohub-paddle-ocr"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22"
image = "0.25"
libc = "0.2"
ocr-rs = "2.2.2"
ort = { version = "2.0.0-rc.12", default-features = false, features = ["api-20", "load-dynamic"] }
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
